Fix content alignment below header, add back button to help page

--- a/ardroid/www/css/default.css
+++ b/ardroid/www/css/default.css
@@ -77,7 +77,7 @@ p {
 }
 
 .content { /* for pages with a header */
-    margin-top: 52px auto;
+    margin: 52px auto;
 }
 
 
